# taurus-auto-ml

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: __init__.py  classifier.py  data_provider.py  exceptions.py  preprocessor.py
