[metadata]
name = idp_prometheus_metrics
version = attr: idp_prometheus_metrics.__init__.__version__
description = Provides connector for prometheus and bunch of useful utils
long_description = file: README.md
long_description_content_type = text/markdown
keywords = prometheus, metrics, exporter, fastapi, flask
url = https://gitdp.zyfra.com/ds_and_math_users/components/idp_prometheus_metrics
author = idp


[options]
packages = find:
install_requires =
    prometheus_client>="0.14.1"
    psutil>="5.9.0"
    flask>="2.1.1"
    fastapi>="0.75.2"

[options.packages.find]
where = .
include = idp_prometheus_metrics
exclude =
    tests*

[flake8]
max-line-length = 80
ignore =  D100, D101, D103, D104, F401, D205, D400, E402
extend-ignore = W503
exclude =
    .git
    __pycache__
    setup.py
    build
    dist
    releases
    .venv
    .tox
    .mypy_cache
    .pytest_cache
    .vscode
    .github
    test_*
