[metadata]
name = taurus-auto-ml
version = attr: src.__init__.__version__
description = AutoML package
long_description = file: README.md
long_description_content_type = text/markdown
keywords = auto-ml, ml
url = https://github.com/mvrck96/taurus-auto-ml
author = mvrck96


[options]
packages = find:
install_requires =
    pandas
    numpy
    scikit-learn

[options.packages.find]
where = .
include = src
exclude =
    tests*

[flake8]
max-line-length = 80
ignore =  D100, D101, D103, D104, F401, D205, D400, E402
extend-ignore = W503
exclude =
    .git
    __pycache__
    setup.py
    build
    dist
    releases
    .venv
    .tox
    .mypy_cache
    .pytest_cache
    .vscode
    .github
    test_*
